<resources>
    <string name="app_name">Marvel Universe</string>
    <string name="hello">Hello!</string>
    <string name="registerMarvel">Register for the world of Marvel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm the password</string>
    <string name="save">Save</string>
    <string name="login">LOGIN</string>
    <string name="welcomeLogin">Welcome to the Marvel Universe</string>
    <string name="create_acccount">Create acccount</string>
    <string name="or">OR</string>
    <string name="welcome">Welcome!</string>
    <string name="bottom_nav_menu_game">Game</string>
    <string name="bottom_nav_menu_serie">Series</string>
    <string name="bottom_nav_menu_comic">Comics</string>
    <string name="bottom_nav_menu_event">Events</string>
    <string name="bottom_nav_menu_favorite">Favorite</string>
    <string name="app_version">Version 1.0</string>
    <string name="about_app_description">Marvel Universe app was produced by Mobile Android students of Brazil\'s Digital House school.</string>
    <string name="settings_label_sound">Sound</string>
    <string name="settings_title">Settings</string>
    <string name="settings_description">Which marvel hero are you?</string>
    <string name="faq_title">FAQ\'s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comics">Comics</string>
    <string name="choose_your_comic">Choose your comic</string>
    <string name="title_escolha_app">Choice of application:</string>
    <string name="pontos_vitoria">Victory:</string>
    <string name="titulo_empate">Draw:</string>
    <string name="titulo_vitoria">Victory:</string>
    <string name="titulo_perdedor">Defeat:</string>
    <string name="titulo_pergunta_game">Are you a villain or a hero?</string>
    <string name="titulo_qtde_jogadas">Payed:</string>
    <string name="title_comic">Marvel Tales: Iron Man (2019) #1</string>

    <string name="large_text">
    "The gleaming Golden Avenger steals the show as we"
    "celebrate the80th anniversary of the House of Ideas with the era-spanning"
    "MARVEL TALES!"
    "This anthology series shines a spotlight on fan-favorite characters,"
    "features timeless stories and highlights some of our most"
    "impressive talent from the past eight decades. First,"
    "Iron Man is born in the incredible origin story of Tony Stark, as"
    "told by Stan Lee, Larry Lieber and Don Heck in TALES OF SUSPENSE"
    "(1959) #39!"
    "Then the unforgettable Pepper Potts enters Tony’s life as his hard-"
    "working assistant in TALES OF SUSPENSE (1959) #45! And, in IRON"
    "MAN (1968) #150, the team supreme of Bob Layton, David"
    "Michelinie and John Romita Jr. tell a Shell-Head story for the ages!"
    "Trapped in the time-lost land of King Arthur, Iron Man battles Doctor"
    "Doom!"
    </string>
    <string name="event_description">Event description</string>
    <string name="event_title">Event Title</string>

</resources>
