<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_event_32dp"
        android:title="@string/bottom_nav_menu_event" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_32dp"
        android:title="@string/bottom_nav_menu_favorite" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/ic_videogame_controller_32dp"
        android:title="@string/bottom_nav_menu_game" />

    <item
        android:id="@+id/navigation_serie"
        android:icon="@drawable/ic_phone_android_32dp"
        android:title="@string/bottom_nav_menu_serie" />

    <item
        android:id="@+id/navigation_comic"
        android:icon="@drawable/ic_hq_32dp"
        android:title="@string/bottom_nav_menu_comic" />

</menu>
